[INFER] Revert broken, pointless optimization to EnsureDenseArrayCapacity, bug 647524.